--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,19 @@
   --card-width: 6rem;
   --card-height: 8.4rem;
   --card-aspect: 5 / 7;
+  --sidebar-width: 300px;
+}
+
+@media (orientation: landscape) and (max-width: 1024px) {
+  :root {
+    --sidebar-width: 180px;
+  }
+}
+
+@media (orientation: portrait) and (max-width: 768px) {
+  :root {
+    --sidebar-width: 0px;
+  }
 }
 
 html {
@@ -10,6 +23,18 @@ html {
     -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
     Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   overflow-x: hidden;
+}
+
+@media (min-width: 1440px) {
+  html {
+    font-size: 75%;
+  }
+}
+
+@media (min-width: 1920px) {
+  html {
+    font-size: 87.5%;
+  }
 }
 
 body {
